# frc-syncer

./: package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
.github/: dependabot.yml
.github/worflows/: backend-lint.yml
.github/workflows/: backend-lint.yml  python-models-lint.yaml
apps/api/: pyproject.toml
apps/api/src/api/: main.py
apps/api/src/api/routers/: status.py
apps/api/src/api/services/: db_services.py
apps/backend/: package.json  pyproject.toml
apps/backend/.devcontainer/: devcontainer.json
apps/backend/src/backend/: download_historic.py  main.py  settings.py
apps/backend/src/backend/flows/: sync_tba.py  sync_tba_year.py
apps/backend/src/backend/models/db/: alliance.py  event.py  match.py  tba_page_etag.py
apps/backend/src/backend/models/tba/: district.py  event.py  event_simple.py  match.py  match_alliance.py  match_data.py  match_simple.py  team_data.py  team_simple.py
apps/backend/src/backend/services/: db_service.py
apps/backend/src/backend/tasks/: sync_event_matches.py  sync_event_ranks.py  sync_event_teams.py  sync_events.py  sync_teams.py
src/frc-syncer/: download_historic.py
src/frc-syncer/flows/: download_historic.py  sync_tba_year.py
src/frc-syncer/models/tba/: event.py  match.py  ranking.py
src/frc-syncer/services/: db_service.py
src/frc-syncer/tasks/: sync_event_matches.py  sync_event_ranks.py  sync_events.py  sync_tba_year.py  sync_teams.py
