[project]
name = "api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Siddharth Rao", email = "siddrao.926@gmail.com"},
]
dependencies = ["fastapi[standard]>=0.115.6", "supabase>=2.10.0", "python-dotenv>=1.0.1", "python-models @ file:///${PROJECT_ROOT}/../../packages/python-models"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
