[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Siddharth Rao", email = "siddrao.926@gmail.com" }]

dependencies = [
    "prefect>=3.1.5",
    "requests>=2.32.3",
    "supabase>=2.10.0",
    "python-dotenv>=1.0.1",
]

requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false
