[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Siddharth Rao", email = "siddrao.926@gmail.com" }]

dependencies = [
    "prefect>=3.1.5",
    "requests>=2.32.3",
    "supabase>=2.10.0",
    "python-dotenv>=1.0.1",
]

requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
lint = ["flake8>=7.1.1", "black>=24.10.0", "isort>=5.13.2"]


[tool.pdm]
distribution = false

[tool.isort]
profile = "black"

[tool.black]
line-length = 79
